--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -4,9 +4,16 @@
   <div class="container">
     <i class="fas fa-key fa-6x"></i>
     <h1 class="display-3">You've Discovered My Secret!</h1>
-    <p class="secret-text">Jack Bauer is my hero.</p>
+
+   <% for (let i = 0; i < userWithSecrets.length; i++) {%>
+    <% for (let j = 0; j < userWithSecrets[i].secrets.length; j++){ %>
+        <p class="secret-text"> <%= userWithSecrets[i].secrets[j] %></p>
+  <% }  } %>
+
+
+
     <hr>
-    
+
     <a class="btn btn-light btn-lg" href="/logout" role="button">Log Out</a>
     <a class="btn btn-dark btn-lg" href="/submit" role="button">Submit a Secret</a>
   </div>
